ikiwiki (3.20130213) UNRELEASED; urgency=low

  * Allow dots in directive parameter names. (tango)

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Feb 2013 17:23:12 -0400

ikiwiki (3.20130212) unstable; urgency=low

  * htmlscrubber: Allow the bitcoin URI scheme.
  * htmlscrubber: Allow the URI schemes of major VCS's.
  * aggregate: When run with --aggregate, if an aggregation is already
    running, don't go on and --refresh.
  * trail: Avoid excess dependencies between pages in the trail
    and the page defining the trail. Thanks, smcv.
  * opendiscussion: Don't allow editing discussion pages if discussion pages
    are disabled. (smcv)
  * poll: Add expandable option to allow users to easily add new choices to
    a poll.
  * trail: Avoid massive slowdown caused by pagetemplate hook when displaying
    dynamic cgi pages, which cannot use trail anyway.
  * Deal with empty diffurl in configuration.
  * cvs: Various fixes. (schmonz)
  * highlight: Now adds a span with class highlight-<extension> around
    highlighted content, allowing for language-specific css styling.

 -- Joey Hess <joeyh@debian.org>  Tue, 12 Feb 2013 21:48:02 -0400

ikiwiki (3.20121212) unstable; urgency=low

  * filecheck: Fix bug that prevented File::MimeInfo::Magic from ever
    being used.
  * openid: Display openid in Preferences page as a comment, so it can be
    selected in all browsers.

 -- Joey Hess <joeyh@debian.org>  Tue, 11 Dec 2012 12:12:12 -0400

ikiwiki (3.20121017) unstable; urgency=low

  * recentchangesdiff: fix further breakage to the template from 3.20120725 

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Oct 2012 20:49:27 -0400

ikiwiki (3.20121016) unstable; urgency=low

  * monochrome: New theme, contributed by Jon Dowland.
  * rst: Ported to python 3, while still also being valid python 2.
    Thanks, W. Trevor King
  * Try to avoid a situation in which so many ikiwiki cgi wrapper programs
    are running, all waiting on some long-running thing like a site rebuild,