@@ -18,6 +18,7 @@ sub getsetup () {
 		plugin => {
 			safe => 0,
 			rebuild => undef,
+			section => "special-purpose",
 		},
 		add_underlays => {
 			type => "string",
