@@ -1,6 +1,7 @@
 ikiwiki (3.20130213) UNRELEASED; urgency=low
 
   * Allow dots in directive parameter names. (tango)
+  * Add missing plugin section, and deal with missing sections with a warning.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 15 Feb 2013 17:23:12 -0400
 
